--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ biography: "R.zip is institution of SungKyunKwan University. Started from Statis
 colophon: "will be added if this still exists"
 
 baseurl: ""
-url: "http://hugosereno.eu"
+url: "https://rziphome.github.io"
 
 twitter_username: ferreira_hugo
 github_username: hugoferreira
